remove unnecessary code and improve deprecated