@@ -23,13 +23,10 @@
 package io.bioimage.modelrunner.engine;
 
 import java.io.File;
-import java.io.IOException;
-import java.io.UnsupportedEncodingException;
 import java.lang.reflect.InvocationTargetException;
 import java.net.MalformedURLException;
 import java.net.URISyntaxException;
 import java.net.URL;
-import java.net.URLDecoder;
 import java.util.ArrayList;
 import java.util.Enumeration;
 import java.util.HashMap;
@@ -37,7 +34,6 @@ import java.util.zip.ZipEntry;
 import java.util.zip.ZipFile;
 
 import io.bioimage.modelrunner.exceptions.LoadEngineException;
-import io.bioimage.modelrunner.system.PlatformDetection;
 import io.bioimage.modelrunner.versionmanagement.DeepLearningVersion;
 
 /**
@@ -124,6 +120,8 @@ public class EngineLoader extends ClassLoader
 	{
 		super();
 		this.baseClassloader = classloader;
+		if (engineInfo.isBioengine())
+			return;
 		this.enginePath = engineInfo.getDeepLearningVersionJarsDirectory();
 		this.engine = engineInfo.getEngine();
 		this.versionedEngine = this.engine + engineInfo.getMajorVersion();
@@ -205,18 +203,29 @@ public class EngineLoader extends ClassLoader
 
 	/**
 	 * Set the ClassLoader containing the engines classes as the Thread
-	 * classloader
+	 * classloader.
+	 * If the model is to be loaded on the bioengine, nothing happens
+	 * 
 	 */
 	public void setEngineClassLoader()
 	{
+		// If {@link #enginePath}, it means that the model is going to be loaded on the bioengine,
+		// so this is not necessary
+		if (enginePath == null)
+			return;
 		Thread.currentThread().setContextClassLoader( engineClassloader );
 	}
 
 	/**
 	 * Set the parent ClassLoader as the Thread classloader
+	 * If the model is to be loaded on the bioengine, nothing happens
 	 */
 	public void setBaseClassLoader()
 	{
+		// If {@link #enginePath}, it means that the model is going to be loaded on the bioengine,
+		// so this is not necessary
+		if (enginePath == null)
+			return;
 		Thread.currentThread().setContextClassLoader( this.baseClassloader );
 	}
 
@@ -255,7 +264,7 @@ public class EngineLoader extends ClassLoader
 					{
 						// Assume that DeepLearningInterface has no arguments
 						// for the constructor
-						return ( DeepLearningEngineInterface ) c.newInstance();
+						return ( DeepLearningEngineInterface ) c.getDeclaredConstructor().newInstance();
 					}
 				}
 				// REmove references
@@ -276,7 +285,7 @@ public class EngineLoader extends ClassLoader
 	 *            JAR file
 	 * @return the Class name as seen by the ClassLoader
 	 */
-	public static String getClassNameInJAR( String entryName )
+	private static String getClassNameInJAR( String entryName )
 	{
 		String className = entryName.substring( 0, entryName.indexOf( "." ) );
 		className = className.replace( "/", "." );
@@ -326,7 +335,8 @@ public class EngineLoader extends ClassLoader
 	}
 
 	/**
-	 * Return the engine instance from where to call the corresponging engine
+	 * Return the engine instance from where to call the corresponging engine.
+	 * 
 	 * 
 	 * @return engine instance
 	 */
@@ -343,7 +353,6 @@ public class EngineLoader extends ClassLoader
 	{
 		engineInstance.closeModel();
 		setBaseClassLoader();
-		System.out.println( "Exited engine ClassLoader" );
 	}
 	
 	/**
@@ -353,93 +362,5 @@ public class EngineLoader extends ClassLoader
 	 */
 	public static HashMap<String, String> getLoadedVersions() {
 		return loadedVersions;
-	}
-	
-	/**
-	 * Check if the software that calls the JDLL uses an incompatible version of the JNA
-	 * library. If it does, an exception is thrown.
-	 * @throws IOException if a JNA version different to 5 is detected
-	 */
-	private void checkJNA() throws IOException {
-		String jna = getJNAJar();
-		if (jna == null)
-			return;
-		boolean match = jna.matches("jna-5\\.[A-Za-z0-9]+\\.[A-Za-z0-9]+\\.jar");
-		if (!match)
-			throw new IOException("Cannot load the engine. The selected engine is only compatible" + System.lineSeparator()
-					+ "with the JNA JAR version 5, but other JNA versions have been loaded. " + System.lineSeparator()
-					+ "The found version is incompatible with the selected engine," + System.lineSeparator()
-					+ "please update your JNA JAR to version 5 in order to be able to load the wanted engine." + System.lineSeparator()
-					+ "Here is the url for a compatible JNA version: " + System.lineSeparator()
-					+ "https://repo1.maven.org/maven2/net/java/dev/jna/jna/5.13.0/jna-5.13.0.jar");
-	}
-	
-	/**
-	 * GEt the jar of the JNA library if it exists
-	 * @return jna library jar
-	 */
-	private String getJNAJar() {
-		Class<?> cls = null;
-		try {
-			cls = baseClassloader.loadClass("com.sun.jna.Native");
-		} catch (ClassNotFoundException e1) {
-		}
-		if (cls == null)
-			return null;
-		String dir;
-		try {
-			dir = getPathFromClass(cls);
-		} catch (UnsupportedEncodingException e) {
-			String classResource = cls.getName().replace('.', '/') + ".class";
-		    URL resourceUrl = cls.getClassLoader().getResource(classResource);
-		    if (resourceUrl == null) {
-		        return null;
-		    }
-		    String urlString = resourceUrl.toString();
-		    if (urlString.startsWith("jar:")) {
-		        urlString = urlString.substring(4);
-		    }
-		    if (urlString.startsWith("file:/") && PlatformDetection.isWindows()) {
-		        urlString = urlString.substring(6);
-		    } else if (urlString.startsWith("file:/") && !PlatformDetection.isWindows()) {
-		        urlString = urlString.substring(5);
-		    }
-		    File file = new File(urlString);
-		    String path = file.getAbsolutePath();
-		    if (path.lastIndexOf(".jar!") != -1)
-		    	path = path.substring(0, path.lastIndexOf(".jar!")) + ".jar";
-		    dir = path;
-		}
-		return new File(dir).getName();
-	}
-	
-	/**
-	 * Method that gets the path to the JAR from where a specific class is being loaded
-	 * @param clazz
-	 * 	class of interest
-	 * @return the path to the JAR that contains the class
-	 * @throws UnsupportedEncodingException if the url of the JAR is not encoded in UTF-8
-	 */
-	private static String getPathFromClass(Class<?> clazz) throws UnsupportedEncodingException {
-	    String classResource = clazz.getName().replace('.', '/') + ".class";
-	    URL resourceUrl = clazz.getClassLoader().getResource(classResource);
-	    if (resourceUrl == null) {
-	        return null;
-	    }
-	    String urlString = resourceUrl.toString();
-	    if (urlString.startsWith("jar:")) {
-	        urlString = urlString.substring(4);
-	    }
-	    if (urlString.startsWith("file:/") && PlatformDetection.isWindows()) {
-	        urlString = urlString.substring(6);
-	    } else if (urlString.startsWith("file:/") && !PlatformDetection.isWindows()) {
-	        urlString = urlString.substring(5);
-	    }
-	    urlString = URLDecoder.decode(urlString, "UTF-8");
-	    File file = new File(urlString);
-	    String path = file.getAbsolutePath();
-	    if (path.lastIndexOf(".jar!") != -1)
-	    	path = path.substring(0, path.lastIndexOf(".jar!")) + ".jar";
-	    return path;
 	}
 }
